removed overflow to see if thats the issue

--- a/style.css
+++ b/style.css
@@ -77,10 +77,6 @@ body {
   padding-top: 10%;
   /*border-bottom: 2px solid;*/
 }
-hr {
-  width: 401px;
-  color: #333;
-}
 .projectContent {
   display: flex;
   text-align: center;
@@ -88,6 +84,11 @@ hr {
   padding-bottom: 30px;
 
 }
+hr {
+  width: 401px;
+  color: #333;
+}
+
 
 .projectCard {
   border-radius: 10px;
@@ -95,7 +96,7 @@ hr {
   height: 100%;
   width: 300px;
   text-align: center;
-  overflow: hidden;
+  /*overflow: hidden;*/
   transition: all 500ms;
 }
 .boxShadow {
@@ -191,6 +192,10 @@ hr {
 .contactBtns {
   display: flex;
   justify-content: space-between;
+}
+
+
+@media only screen and (min-width: 601px) {
 }
 
 @media only screen and (max-width: 600px) {
